--- a/HW assignments/HW3/HW3-finished.ipynb
+++ b/HW assignments/HW3/HW3-finished.ipynb
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -1172,35 +1172,35 @@
        "      <th>count</th>\n",
        "      <td>116.000000</td>\n",
        "      <td>146.000000</td>\n",
-       "      <td>151.000000</td>\n",
-       "      <td>151.000000</td>\n",
-       "      <td>151.000000</td>\n",
-       "      <td>151.000000</td>\n",
+       "      <td>153.000000</td>\n",
+       "      <td>153.000000</td>\n",
+       "      <td>153.000000</td>\n",
+       "      <td>153.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
        "      <td>42.129310</td>\n",
        "      <td>185.931507</td>\n",
-       "      <td>9.941722</td>\n",
-       "      <td>78.165563</td>\n",
-       "      <td>7.019868</td>\n",
-       "      <td>15.801325</td>\n",
+       "      <td>9.957516</td>\n",
+       "      <td>77.882353</td>\n",
+       "      <td>6.993464</td>\n",
+       "      <td>15.803922</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
        "      <td>32.987885</td>\n",
        "      <td>90.058422</td>\n",
-       "      <td>3.524984</td>\n",
-       "      <td>9.198138</td>\n",
-       "      <td>1.406984</td>\n",
-       "      <td>8.832531</td>\n",
+       "      <td>3.523001</td>\n",
+       "      <td>9.465270</td>\n",
+       "      <td>1.416522</td>\n",
+       "      <td>8.864520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>7.000000</td>\n",
        "      <td>1.700000</td>\n",
-       "      <td>57.000000</td>\n",
+       "      <td>56.000000</td>\n",
        "      <td>5.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
@@ -1209,7 +1209,7 @@
        "      <td>18.000000</td>\n",
        "      <td>115.750000</td>\n",
        "      <td>7.400000</td>\n",
-       "      <td>73.000000</td>\n",
+       "      <td>72.000000</td>\n",
        "      <td>6.000000</td>\n",
        "      <td>8.000000</td>\n",
        "    </tr>\n",
@@ -1246,17 +1246,17 @@
       ],
       "text/plain": [
        "            Ozone     Solar.R        Wind        Temp       Month         Day\n",
-       "count  116.000000  146.000000  151.000000  151.000000  151.000000  151.000000\n",
-       "mean    42.129310  185.931507    9.941722   78.165563    7.019868   15.801325\n",
-       "std     32.987885   90.058422    3.524984    9.198138    1.406984    8.832531\n",
-       "min      1.000000    7.000000    1.700000   57.000000    5.000000    1.000000\n",
-       "25%     18.000000  115.750000    7.400000   73.000000    6.000000    8.000000\n",
+       "count  116.000000  146.000000  153.000000  153.000000  153.000000  153.000000\n",
+       "mean    42.129310  185.931507    9.957516   77.882353    6.993464   15.803922\n",
+       "std     32.987885   90.058422    3.523001    9.465270    1.416522    8.864520\n",
+       "min      1.000000    7.000000    1.700000   56.000000    5.000000    1.000000\n",
+       "25%     18.000000  115.750000    7.400000   72.000000    6.000000    8.000000\n",
        "50%     31.500000  205.000000    9.700000   79.000000    7.000000   16.000000\n",
        "75%     63.250000  258.750000   11.500000   85.000000    8.000000   23.000000\n",
        "max    168.000000  334.000000   20.700000   97.000000    9.000000   31.000000"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,39 +1264,23 @@
    "source": [
     "url = \"../../Data/ozone.csv\"\n",
     "OzoneData = pd.read_csv(url)\n",
-    "OzoneData_dropped = OzoneData.dropna(how = 'all', subset = ['Ozone', 'Solar.R'])\n",
+    "OzoneData_dropped = OzoneData.dropna(how = 'any', subset = ['Ozone', 'Solar.R'])\n",
     "#Set baseline\n",
     "OzoneData.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Input contains NaN, infinity or a value too large for dtype('float64').",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-58-66405328b551>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mOzoneData_dropped\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Solar.R'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Wind'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Temp'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mY\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mOzoneData_dropped\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Ozone'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0my_hat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlinreg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mstderr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0my_hat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mozone_y_hat_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_hat\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstderr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mOzoneData_dropped\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Ozone'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/albarron/anaconda/lib/python2.7/site-packages/sklearn/linear_model/base.pyc\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    153\u001b[0m             \u001b[0mReturns\u001b[0m \u001b[0mpredicted\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    154\u001b[0m         \"\"\"\n\u001b[0;32m--> 155\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecision_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    156\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    157\u001b[0m     \u001b[0m_center_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstaticmethod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcenter_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/albarron/anaconda/lib/python2.7/site-packages/sklearn/linear_model/base.pyc\u001b[0m in \u001b[0;36mdecision_function\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    136\u001b[0m         \u001b[0mcheck_is_fitted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"coef_\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    137\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 138\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'csr'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'csc'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'coo'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    139\u001b[0m         return safe_sparse_dot(X, self.coef_.T,\n\u001b[1;32m    140\u001b[0m                                dense_output=True) + self.intercept_\n",
-      "\u001b[0;32m/Users/albarron/anaconda/lib/python2.7/site-packages/sklearn/utils/validation.pyc\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features)\u001b[0m\n\u001b[1;32m    350\u001b[0m                              array.ndim)\n\u001b[1;32m    351\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mforce_all_finite\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 352\u001b[0;31m             \u001b[0m_assert_all_finite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    353\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    354\u001b[0m     \u001b[0mshape_repr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_shape_repr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/albarron/anaconda/lib/python2.7/site-packages/sklearn/utils/validation.pyc\u001b[0m in \u001b[0;36m_assert_all_finite\u001b[0;34m(X)\u001b[0m\n\u001b[1;32m     50\u001b[0m             and not np.isfinite(X).all()):\n\u001b[1;32m     51\u001b[0m         raise ValueError(\"Input contains NaN, infinity\"\n\u001b[0;32m---> 52\u001b[0;31m                          \" or a value too large for %r.\" % X.dtype)\n\u001b[0m\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Input contains NaN, infinity or a value too large for dtype('float64')."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "# Ozone fill\n",
     "X = OzoneData_dropped[['Solar.R','Wind','Temp']]\n",
     "Y = OzoneData_dropped['Ozone']\n",
+    "linreg.fit(X,Y)\n",
     "y_hat = linreg.predict(X)\n",
     "stderr = (sum((Y-y_hat)**2)/(len(Y)-2))**.5\n",
     "ozone_y_hat_error = y_hat + np.random.normal(0,stderr,len(OzoneData_dropped['Ozone']))\n",
@@ -1304,9 +1288,9 @@
     "\n",
     "\n",
     "# Solar.R fill\n",
-    "ozone_y_hat_error = y_hat + np.random.normal(0,stderr,len(OzoneData_dropped['Solar.R']))\n",
     "X = OzoneData_dropped[['Ozone','Temp']]\n",
     "Y = OzoneData_dropped['Solar.R']\n",
+    "linreg.fit(X,Y)\n",
     "y_hat = linreg.predict(X)\n",
     "stderr = (sum((Y-y_hat)**2)/(len(Y)-2))**.5\n",
     "solarr_y_hat_error = y_hat + np.random.normal(0,stderr,len(OzoneData_dropped['Solar.R']))\n",
@@ -1315,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -1327,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -1351,7 +1335,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>116.000000</td>\n",
+       "      <td>150.000000</td>\n",
        "      <td>153.000000</td>\n",
        "      <td>153.000000</td>\n",
        "      <td>153.000000</td>\n",
@@ -1360,8 +1344,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>42.129310</td>\n",
-       "      <td>183.989781</td>\n",
+       "      <td>75.250515</td>\n",
+       "      <td>178.643768</td>\n",
        "      <td>9.957516</td>\n",
        "      <td>77.882353</td>\n",
        "      <td>6.993464</td>\n",
@@ -1369,8 +1353,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>32.987885</td>\n",
-       "      <td>88.906060</td>\n",
+       "      <td>76.634234</td>\n",
+       "      <td>94.294887</td>\n",
        "      <td>3.523001</td>\n",
        "      <td>9.465270</td>\n",
        "      <td>1.416522</td>\n",
@@ -1378,8 +1362,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>7.000000</td>\n",
+       "      <td>-28.900577</td>\n",
+       "      <td>-15.903566</td>\n",
        "      <td>1.700000</td>\n",
        "      <td>56.000000</td>\n",
        "      <td>5.000000</td>\n",
@@ -1387,8 +1371,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>18.000000</td>\n",
-       "      <td>113.144703</td>\n",
+       "      <td>20.250000</td>\n",
+       "      <td>95.000000</td>\n",
        "      <td>7.400000</td>\n",
        "      <td>72.000000</td>\n",
        "      <td>6.000000</td>\n",
@@ -1396,8 +1380,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>31.500000</td>\n",
-       "      <td>197.000000</td>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>194.000000</td>\n",
        "      <td>9.700000</td>\n",
        "      <td>79.000000</td>\n",
        "      <td>7.000000</td>\n",
@@ -1405,7 +1389,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>63.250000</td>\n",
+       "      <td>105.250000</td>\n",
        "      <td>256.000000</td>\n",
        "      <td>11.500000</td>\n",
        "      <td>85.000000</td>\n",
@@ -1414,7 +1398,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>168.000000</td>\n",
+       "      <td>340.347518</td>\n",
        "      <td>334.000000</td>\n",
        "      <td>20.700000</td>\n",
        "      <td>97.000000</td>\n",
@@ -1427,17 +1411,17 @@
       ],
       "text/plain": [
        "            Ozone     Solar.R        Wind        Temp       Month         Day\n",
-       "count  116.000000  153.000000  153.000000  153.000000  153.000000  153.000000\n",
-       "mean    42.129310  183.989781    9.957516   77.882353    6.993464   15.803922\n",
-       "std     32.987885   88.906060    3.523001    9.465270    1.416522    8.864520\n",
-       "min      1.000000    7.000000    1.700000   56.000000    5.000000    1.000000\n",
-       "25%     18.000000  113.144703    7.400000   72.000000    6.000000    8.000000\n",
-       "50%     31.500000  197.000000    9.700000   79.000000    7.000000   16.000000\n",
-       "75%     63.250000  256.000000   11.500000   85.000000    8.000000   23.000000\n",
-       "max    168.000000  334.000000   20.700000   97.000000    9.000000   31.000000"
+       "count  150.000000  153.000000  153.000000  153.000000  153.000000  153.000000\n",
+       "mean    75.250515  178.643768    9.957516   77.882353    6.993464   15.803922\n",
+       "std     76.634234   94.294887    3.523001    9.465270    1.416522    8.864520\n",
+       "min    -28.900577  -15.903566    1.700000   56.000000    5.000000    1.000000\n",
+       "25%     20.250000   95.000000    7.400000   72.000000    6.000000    8.000000\n",
+       "50%     44.000000  194.000000    9.700000   79.000000    7.000000   16.000000\n",
+       "75%    105.250000  256.000000   11.500000   85.000000    8.000000   23.000000\n",
+       "max    340.347518  334.000000   20.700000   97.000000    9.000000   31.000000"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
