--- a/Code/Lecture9-Practice-Code.ipynb
+++ b/Code/Lecture9-Practice-Code.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/albarron/anaconda/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +163,7 @@
        "4         1     -1         0  unknown  no  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -287,7 +296,7 @@
        "max      25.000000  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -562,20 +571,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['age', 'balance', 'duration', 'campaign', 'pdays', 'previous', 'marital_single', 'default_yes', 'housing_yes', 'loan_yes']\n",
-      "[[  1.42591061e-03   1.05992731e-05   3.78467615e-03  -9.08096412e-02\n",
-      "    2.42752182e-03   9.52584601e-02   1.70430360e-01   1.39078610e-01\n",
-      "   -9.89402819e-01  -8.53963269e-01]]\n",
-      "[-2.83913141]\n"
+      "Intercept [-3.05725819]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('age', 0.0051429265832905122),\n",
+       " ('balance', 1.0957510862913199e-05),\n",
+       " ('duration', 0.0037811246979828645),\n",
+       " ('campaign', -0.088491740844304209),\n",
+       " ('pdays', 0.0024235422412227825),\n",
+       " ('previous', 0.094805874502587997),\n",
+       " ('marital_single', 0.26441639441819964),\n",
+       " ('default_yes', 0.20313288795293041),\n",
+       " ('housing_yes', -0.9412700412106767),\n",
+       " ('loan_yes', -0.79258474799341727)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "logreg = LogisticRegression()\n",
     "logreg.fit(X,y)\n",
-    "print ['age','balance','duration','campaign','pdays','previous','marital_single','default_yes','housing_yes','loan_yes']\n",
-    "print logreg.coef_\n",
-    "print logreg.intercept_\n"
+    "cols = ['age','balance','duration','campaign','pdays','previous','marital_single','default_yes','housing_yes','loan_yes']\n",
+    "# print \n",
+    "# print logreg.coef_\n",
+    "print \"Intercept\",logreg.intercept_\n",
+    "zip(cols,logreg.coef_[0])"
    ]
   },
   {
@@ -587,23 +613,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.88300221,  0.89159292,  0.88053097,  0.90265487,  0.88495575,\n",
-       "        0.89159292,  0.87831858,  0.90707965,  0.89159292,  0.88716814])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#sklearn.cross_validation.cross_val_score\n",
     "#(estimator, X, y=None, scoring=None, cv=None, \n",
@@ -620,23 +634,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[3923,   77],\n",
-       "       [ 425,   96]])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_hat = logreg.predict(X)\n",
     "confusion_matrix(y,y_hat)"
